--- a/ST.Library.UI/ST.Library.UI.csproj
+++ b/ST.Library.UI/ST.Library.UI.csproj
@@ -36,6 +36,9 @@
     <DebugSymbols>true</DebugSymbols>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
